src/snapshots/pyc_editor__sir__test__force_stack_depth.snap
---
source: src/sir.rs
expression: ir_cfg
---
SIRControlFlowGraph {
    blocks: [
        NormalBlock(
            SIRNormalBlock {
                nodes: SIR(
                    [
                        Assignment(
                            AuxVar {
                                name: "value_0",
                            },
                            Call(
                                Call {
                                    node: SIRNode {
                                        opcode: LOAD_CONST,
                                        oparg: 0,
                                        input: [],
                                        output: [
                                            StackItem {
                                                name: "value",
                                                count: 1,
                                                index: 0,
                                            },
                                        ],
                                        net_stack_delta: 1,
                                    },
                                    stack_inputs: [],
                                },
                            ),
                        ),
                        Assignment(
                            AuxVar {
                                name: "value_1",
                            },
                            Call(
                                Call {
                                    node: SIRNode {
                                        opcode: LOAD_CONST,
                                        oparg: 0,
                                        input: [],
                                        output: [
                                            StackItem {
                                                name: "value",
                                                count: 1,
                                                index: 0,
                                            },
                                        ],
                                        net_stack_delta: 1,
                                    },
                                    stack_inputs: [],
                                },
                            ),
                        ),
                    ],
                ),
                branch_block: NoIndex,
                default_block: Fallthrough(
                    Index(
                        1,
                    ),
                ),
            },
        ),
        ExceptionBlock(
            SIRExceptionBlock {
                block_indexes: [
                    3,
                ],
                exception_handler: SIRBranchEdge {
                    reason: Exception(
                        (
                            false,
                            1,
                        ),
                    ),
                    statements: Some(
                        SIR(
                            [
                                Assignment(
                                    AuxVar {
                                        name: "phi_4",
                                    },
                                    PhiNode(
                                        [
                                            AuxVar {
                                                name: "value_1",
                                            },
                                        ],
                                    ),
                                ),
                                UseVar(
                                    AuxVar {
                                        name: "phi_4",
                                    },
                                ),
                                Assignment(
                                    AuxVar {
                                        name: "exc_0",
                                    },
                                    Exception(
                                        ExceptionCall {
                                            exception: SIRException {
                                                lasti: false,
                                                stack_depth: 1,
                                                input: [],
                                                output: [
                                                    StackItem {
                                                        name: "lasti",
                                                        count: 0,
                                                        index: 0,
                                                    },
                                                    StackItem {
                                                        name: "exc",
                                                        count: 1,
                                                        index: 0,
                                                    },
                                                ],
                                                net_stack_delta: 1,
                                            },
                                            stack_inputs: [],
                                        },
                                    ),
                                ),
                            ],
                        ),
                    ),
                    block_index: Index(
                        2,
                    ),
                },
                default_block: Edge(
                    SIRBranchEdge {
                        reason: Exception(
                            (
                                false,
                                1,
                            ),
                        ),
                        statements: None,
                        block_index: Index(
                            3,
                        ),
                    },
                ),
            },
        ),
        NormalBlock(
            SIRNormalBlock {
                nodes: SIR(
                    [
                        DisregardCall(
                            Call {
                                node: SIRNode {
                                    opcode: POP_TOP,
                                    oparg: 0,
                                    input: [
                                        StackItem {
                                            name: "top",
                                            count: 1,
                                            index: -1,
                                        },
                                    ],
                                    output: [],
                                    net_stack_delta: -1,
                                },
                                stack_inputs: [
                                    AuxVar {
                                        name: "exc_0",
                                    },
                                ],
                            },
                        ),
                        DisregardCall(
                            Call {
                                node: SIRNode {
                                    opcode: POP_TOP,
                                    oparg: 0,
                                    input: [
                                        StackItem {
                                            name: "top",
                                            count: 1,
                                            index: -1,
                                        },
                                    ],
                                    output: [],
                                    net_stack_delta: -1,
                                },
                                stack_inputs: [
                                    AuxVar {
                                        name: "value_0",
                                    },
                                ],
                            },
                        ),
                        Assignment(
                            AuxVar {
                                name: "value_2",
                            },
                            Call(
                                Call {
                                    node: SIRNode {
                                        opcode: LOAD_CONST,
                                        oparg: 0,
                                        input: [],
                                        output: [
                                            StackItem {
                                                name: "value",
                                                count: 1,
                                                index: 0,
                                            },
                                        ],
                                        net_stack_delta: 1,
                                    },
                                    stack_inputs: [],
                                },
                            ),
                        ),
                        DisregardCall(
                            Call {
                                node: SIRNode {
                                    opcode: RETURN_VALUE,
                                    oparg: 0,
                                    input: [
                                        StackItem {
                                            name: "return_value",
                                            count: 1,
                                            index: -1,
                                        },
                                    ],
                                    output: [],
                                    net_stack_delta: -1,
                                },
                                stack_inputs: [
                                    AuxVar {
                                        name: "value_2",
                                    },
                                ],
                            },
                        ),
                    ],
                ),
                branch_block: NoIndex,
                default_block: NoIndex,
            },
        ),
        NormalBlock(
            SIRNormalBlock {
                nodes: SIR(
                    [
                        DisregardCall(
                            Call {
                                node: SIRNode {
                                    opcode: POP_TOP,
                                    oparg: 0,
                                    input: [
                                        StackItem {
                                            name: "top",
                                            count: 1,
                                            index: -1,
                                        },
                                    ],
                                    output: [],
                                    net_stack_delta: -1,
                                },
                                stack_inputs: [
                                    AuxVar {
                                        name: "value_1",
                                    },
                                ],
                            },
                        ),
                        DisregardCall(
                            Call {
                                node: SIRNode {
                                    opcode: POP_TOP,
                                    oparg: 0,
                                    input: [
                                        StackItem {
                                            name: "top",
                                            count: 1,
                                            index: -1,
                                        },
                                    ],
                                    output: [],
                                    net_stack_delta: -1,
                                },
                                stack_inputs: [
                                    AuxVar {
                                        name: "value_0",
                                    },
                                ],
                            },
                        ),
                        Assignment(
                            AuxVar {
                                name: "value_3",
                            },
                            Call(
                                Call {
                                    node: SIRNode {
                                        opcode: LOAD_CONST,
                                        oparg: 0,
                                        input: [],
                                        output: [
                                            StackItem {
                                                name: "value",
                                                count: 1,
                                                index: 0,
                                            },
                                        ],
                                        net_stack_delta: 1,
                                    },
                                    stack_inputs: [],
                                },
                            ),
                        ),
                        DisregardCall(
                            Call {
                                node: SIRNode {
                                    opcode: RETURN_VALUE,
                                    oparg: 0,
                                    input: [
                                        StackItem {
                                            name: "return_value",
                                            count: 1,
                                            index: -1,
                                        },
                                    ],
                                    output: [],
                                    net_stack_delta: -1,
                                },
                                stack_inputs: [
                                    AuxVar {
                                        name: "value_3",
                                    },
                                ],
                            },
                        ),
                    ],
                ),
                branch_block: NoIndex,
                default_block: NoIndex,
            },
        ),
    ],
    start_index: Fallthrough(
        Index(
            0,
        ),
    ),
}
