src/snapshots/pyc_editor__sir__test__simple_cfg_to_sir.snap
---
source: src/sir.rs
expression: ir_cfg
---
SIRControlFlowGraph {
    blocks: [
        NormalBlock(
            SIRNormalBlock {
                nodes: SIR(
                    [
                        Assignment(
                            AuxVar {
                                name: "value_0",
                            },
                            Call(
                                Call {
                                    node: SIRNode {
                                        opcode: LOAD_CONST,
                                        oparg: 0,
                                        input: [],
                                        output: [
                                            StackItem {
                                                name: "value",
                                                count: 1,
                                                index: 0,
                                            },
                                        ],
                                        net_stack_delta: 1,
                                    },
                                    stack_inputs: [],
                                },
                            ),
                        ),
                        Assignment(
                            AuxVar {
                                name: "value_1",
                            },
                            Call(
                                Call {
                                    node: SIRNode {
                                        opcode: LOAD_CONST,
                                        oparg: 256,
                                        input: [],
                                        output: [
                                            StackItem {
                                                name: "value",
                                                count: 1,
                                                index: 0,
                                            },
                                        ],
                                        net_stack_delta: 1,
                                    },
                                    stack_inputs: [],
                                },
                            ),
                        ),
                        Assignment(
                            AuxVar {
                                name: "value_2",
                            },
                            Call(
                                Call {
                                    node: SIRNode {
                                        opcode: LOAD_CONST,
                                        oparg: 1,
                                        input: [],
                                        output: [
                                            StackItem {
                                                name: "value",
                                                count: 1,
                                                index: 0,
                                            },
                                        ],
                                        net_stack_delta: 1,
                                    },
                                    stack_inputs: [],
                                },
                            ),
                        ),
                        Assignment(
                            AuxVar {
                                name: "res_0",
                            },
                            Call(
                                Call {
                                    node: SIRNode {
                                        opcode: COMPARE_OP,
                                        oparg: 0,
                                        input: [
                                            StackItem {
                                                name: "left",
                                                count: 1,
                                                index: -2,
                                            },
                                            StackItem {
                                                name: "right",
                                                count: 1,
                                                index: -1,
                                            },
                                        ],
                                        output: [
                                            StackItem {
                                                name: "res",
                                                count: 1,
                                                index: -2,
                                            },
                                        ],
                                        net_stack_delta: -1,
                                    },
                                    stack_inputs: [
                                        AuxVar {
                                            name: "value_1",
                                        },
                                        AuxVar {
                                            name: "value_2",
                                        },
                                    ],
                                },
                            ),
                        ),
                    ],
                ),
                branch_block: Edge(
                    SIRBranchEdge {
                        reason: Opcode(
                            POP_JUMP_FORWARD_IF_TRUE,
                        ),
                        statements: Some(
                            SIR(
                                [
                                    DisregardCall(
                                        Call {
                                            node: SIRNode {
                                                opcode: POP_JUMP_FORWARD_IF_TRUE,
                                                oparg: 0,
                                                input: [
                                                    StackItem {
                                                        name: "condition",
                                                        count: 1,
                                                        index: -1,
                                                    },
                                                ],
                                                output: [],
                                                net_stack_delta: -1,
                                            },
                                            stack_inputs: [
                                                AuxVar {
                                                    name: "res_0",
                                                },
                                            ],
                                        },
                                    ),
                                ],
                            ),
                        ),
                        block_index: Index(
                            1,
                        ),
                    },
                ),
                default_block: Edge(
                    SIRBranchEdge {
                        reason: Opcode(
                            POP_JUMP_FORWARD_IF_TRUE,
                        ),
                        statements: Some(
                            SIR(
                                [
                                    DisregardCall(
                                        Call {
                                            node: SIRNode {
                                                opcode: POP_JUMP_FORWARD_IF_TRUE,
                                                oparg: 0,
                                                input: [
                                                    StackItem {
                                                        name: "condition",
                                                        count: 1,
                                                        index: -1,
                                                    },
                                                ],
                                                output: [],
                                                net_stack_delta: -1,
                                            },
                                            stack_inputs: [
                                                AuxVar {
                                                    name: "res_0",
                                                },
                                            ],
                                        },
                                    ),
                                ],
                            ),
                        ),
                        block_index: Index(
                            2,
                        ),
                    },
                ),
            },
        ),
        NormalBlock(
            SIRNormalBlock {
                nodes: SIR(
                    [
                        DisregardCall(
                            Call {
                                node: SIRNode {
                                    opcode: POP_TOP,
                                    oparg: 0,
                                    input: [
                                        StackItem {
                                            name: "top",
                                            count: 1,
                                            index: -1,
                                        },
                                    ],
                                    output: [],
                                    net_stack_delta: -1,
                                },
                                stack_inputs: [
                                    AuxVar {
                                        name: "value_0",
                                    },
                                ],
                            },
                        ),
                        Assignment(
                            AuxVar {
                                name: "value_3",
                            },
                            Call(
                                Call {
                                    node: SIRNode {
                                        opcode: LOAD_CONST,
                                        oparg: 3,
                                        input: [],
                                        output: [
                                            StackItem {
                                                name: "value",
                                                count: 1,
                                                index: 0,
                                            },
                                        ],
                                        net_stack_delta: 1,
                                    },
                                    stack_inputs: [],
                                },
                            ),
                        ),
                        DisregardCall(
                            Call {
                                node: SIRNode {
                                    opcode: RETURN_VALUE,
                                    oparg: 0,
                                    input: [
                                        StackItem {
                                            name: "return_value",
                                            count: 1,
                                            index: -1,
                                        },
                                    ],
                                    output: [],
                                    net_stack_delta: -1,
                                },
                                stack_inputs: [
                                    AuxVar {
                                        name: "value_3",
                                    },
                                ],
                            },
                        ),
                    ],
                ),
                branch_block: NoIndex,
                default_block: NoIndex,
            },
        ),
        NormalBlock(
            SIRNormalBlock {
                nodes: SIR(
                    [
                        DisregardCall(
                            Call {
                                node: SIRNode {
                                    opcode: POP_TOP,
                                    oparg: 0,
                                    input: [
                                        StackItem {
                                            name: "top",
                                            count: 1,
                                            index: -1,
                                        },
                                    ],
                                    output: [],
                                    net_stack_delta: -1,
                                },
                                stack_inputs: [
                                    AuxVar {
                                        name: "value_0",
                                    },
                                ],
                            },
                        ),
                        Assignment(
                            AuxVar {
                                name: "value_4",
                            },
                            Call(
                                Call {
                                    node: SIRNode {
                                        opcode: LOAD_CONST,
                                        oparg: 2,
                                        input: [],
                                        output: [
                                            StackItem {
                                                name: "value",
                                                count: 1,
                                                index: 0,
                                            },
                                        ],
                                        net_stack_delta: 1,
                                    },
                                    stack_inputs: [],
                                },
                            ),
                        ),
                        DisregardCall(
                            Call {
                                node: SIRNode {
                                    opcode: RETURN_VALUE,
                                    oparg: 0,
                                    input: [
                                        StackItem {
                                            name: "return_value",
                                            count: 1,
                                            index: -1,
                                        },
                                    ],
                                    output: [],
                                    net_stack_delta: -1,
                                },
                                stack_inputs: [
                                    AuxVar {
                                        name: "value_4",
                                    },
                                ],
                            },
                        ),
                    ],
                ),
                branch_block: NoIndex,
                default_block: NoIndex,
            },
        ),
    ],
    start_index: Fallthrough(
        Index(
            0,
        ),
    ),
}
